<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="5dp" >

    <VideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/menu_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="23dp"
        android:visibility="visible" >

        <Button
            android:id="@+id/prev_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_left_bg"
            android:contentDescription="@string/tips_prev_page" />

        <Button
            android:id="@+id/next_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_right_bg"
            android:contentDescription="@string/tips_next_page" />

        <TextView
            android:id="@+id/group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:shadowColor="#FF808080"
            android:shadowRadius="3.0"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <GridView
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/group_title"
            android:layout_margin="2dp"
            android:layout_toLeftOf="@+id/next_page"
            android:layout_toRightOf="@+id/prev_page"
            android:gravity="center"
            android:numColumns="4" />

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/reset"
            android:layout_alignLeft="@+id/reset"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/tips_browse_file"
            android:text="@string/btn_browse" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/tips_reset"
            android:text="@string/btn_reset" />
    </RelativeLayout>

</RelativeLayout>